--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
 </div class="userTotal">
 <h3>Your total score is:<span id="finalTotal"></span></h3>
 </div>
-<div class="crytals">
+<div class="crystals">
 
 	<img id="crystal-1" src="assets/images/blue-button.png">
 	<img id="crystal-2" src="assets/images/Purple-Button.png">
